--- a/g/map/views/map.handlebars
+++ b/g/map/views/map.handlebars
@@ -3,6 +3,7 @@
 
 <head>
     <title>Simple Map</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script defer src="https://maps.googleapis.com/maps/api/js?key={{key}}&callback=initMap"></script>
     <link rel="stylesheet" type="text/css" href="/style.css" />
